#3 closed pagination is there

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,11 @@
 <script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+<!-- MDBootstrap Datatables  -->
+
+
+
 </head>
 <body>
   <div class="master-class">
