--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+<script src="../node_modules/chart.js/src/chart.js"></script>
+
+
 </head>
 <body>
   <div class="master-class">
