--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,11 @@
 
   gtag('config', 'UA-176711685-1');
 </script>
-
+  <!-- Google api stuff for polling analytics
+  <script src="https://apis.google.com/js/client:platform.js" async defer></script>
+  <meta name="google-signin-client_id" content="871376995921-ujggfaaqjf67h49dbqpc0i8gp36cscgk.apps.googleusercontent.com">
+  <meta name="google-signin-scope" content="https://www.googleapis.com/auth/analytics.readonly">-->
+  
   <meta charset="utf-8">
   <title>Sam Steinberg Website</title>
   <base href="/">
