--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-176711685-1');
+  gtag('config', 'UA-176711685-1', {'siteSpeedSampleRate': 100, 'sampleRate': 100});
 </script>
   <!-- Google api stuff for polling analytics
   <script src="https://apis.google.com/js/client:platform.js" async defer></script>
