added map embed

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
   <script src="https://apis.google.com/js/client:platform.js" async defer></script>
   <meta name="google-signin-client_id" content="871376995921-ujggfaaqjf67h49dbqpc0i8gp36cscgk.apps.googleusercontent.com">
   <meta name="google-signin-scope" content="https://www.googleapis.com/auth/analytics.readonly">-->
-  
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGaf8FKlEiWkWYIJBvmeTmb_Zx0uX_wjc"></script>
+
   <meta charset="utf-8">
   <title>Sam Steinberg Website</title>
   <base href="/">
